# mlinspect

./: .dockerignore  .gitignore  .pylintrc  .travis.yml  CITATION.cff  Dockerfile  Makefile  README.md  addEdge.py  app.py  codecov.yml  dag.json  docker-compose.yml  increase_healthcare_accuracy.ipynb  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml
assets/: style.css  test.js
demo/: after_task_ questionnaire.ipynb
demo/adult_easy/: adult_easy_demo.ipynb  adult_easy_task.ipynb
demo/compas/: compas_demo.ipynb  compas_task.ipynb
demo/feature_overview/: feature_overview.ipynb  missing_embeddings.py  missing_embeddings_inspection.py  no_missing_embeddings.py
demo/healthcare/: demo_utils.py  fairness_demo_analyzer.py  healthcare.py  healthcare_demo.ipynb  healthcare_histories.csv  healthcare_task.ipynb  (+5 more)
example_pipelines/: __init__.py  _pipelines.py  pipelines.py
examples/: example.ipynb
experiments/: _benchmark_utils.py  benchmark_utils.py  empty_inspection.py  operator_benchmarks.ipynb  performance_benchmarks.ipynb
mlinspect/: __init__.py  _inspector_result.py  _pipeline_inspector.py  demo_utils.py  inspector_result.py  pipeline_inspector.py  utils.py  visualisation.py
requirements/: requirements.dev.txt  requirements.txt
temporary_utils/: click_data.json  df.to_dict.json  directed_example.py  figure_click_hover_selectedData.json  pos_dict.json  util.py
test/: adult_easy.py  test_adult_easy.py  test_pipeline_inspector.py  test_utils.py  test_visualisation.py  testing_helper_utils.py  utils.py
(+248 files in other folders)
